[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hotel-clickhouse-analytics"
version = "0.1.0"
description = "Zenlabs → ClickHouse analytics sidecar for hospitality voice agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "clickhouse-connect>=0.7.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "streamlit>=1.28.0",
    "pandas>=2.0",
    "zenlabs-sdk",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["service*"]
